--- a/_includes/default/footer.html
+++ b/_includes/default/footer.html
@@ -1,6 +1,8 @@
 <footer class="site-footer">
+     <p class="text">
+        {{ site.footer_text | default: "About | Contact | Sitemap | Disclaimer | Privacy Policy" }}</p>
     <p class="text">
-        {{ site.footer_text | default: "Powered by <a href='https://jekyllrb.com/'>Jekyll</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
+        {{ site.footer_text | default: "Powered by <a href='/'>Random Tips</a> with <a href='/'>Love</a>" }}</p>
             <div class="footer-icons">
                 <ul>
                 <!-- Social icons from Font Awesome, if enabled -->
