--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     Theme free for personal and commercial use under the MIT license
     https://github.com/sylhare/Type-on-Strap/blob/master/LICENSE
 -->
-<html lang="en">
+<html lang="id">
   {% include default/head.html %}
   <body>
     {% include default/navbar.html %}
