--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
     <div class="bootstrap-iso">
     {% endif %}
       {{ content }}
+      {% include related-post.html %}
     {% if page.bootstrap %}
     </div>
   {% endif %}
