--- a/_includes/related-post.html
+++ b/_includes/related-post.html
@@ -1,38 +1,55 @@
-<div class="rect">
+{% assign showRelatedPosts = 3 %}
 
-  {% assign maxRelated = 4 %}
-  {% assign minCommonTags =  1 %}
-  {% assign maxRelatedCounter = 0 %}
-
-
-  {% for post in site.posts %}
-
-
-    {% assign sameTagCount = 0 %}
-    {% assign commonTags = '' %}
-
-    {% for tag in post.tags %}
-      {% if post.url != page.url %}
-        {% if page.tags contains tag %}
-          {% assign sameTagCount = sameTagCount | plus: 1 %}
-          {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
-          {% assign commonTags = commonTags | append: tagmarkup %}
+{% capture posts %} 
+    {% for post in site.posts %}
+        {% if post.url != page.url %}
+            {% assign matchingTags = "" | split: ","  %}
+    
+            {% for tag in post.tags %}
+                {% assign currentPostTag = tag | downcase %}
+                {% assign tagsPage = page.tags | downcase %}
+                {% if tagsPage contains currentPostTag %}
+                    {% assign matchingTags = matchingTags | push: currentPostTag %}    
+                {% endif %}
+            {% endfor %}
+            
+            {% assign tagsTotal = matchingTags.size %}
+    
+            {% if tagsTotal < 10 %}
+                {% assign tagsTotal = tagsTotal | prepend: "0" %}
+            {% else %}
+                {% assign tagsTotal = tagsTotal  %}
+            {% endif %}
+            
+            |
+            <article>
+                <strong>{{ tagsTotal }} tags</strong>
+                <header>    
+                    <h5>{{ post.title }}</h5>    
+                </header>
+                <section>
+                <a href="{{ site.baseurl }}{{ post.url }}">
+                    <img width="320" height="200" src="{{ post.image }}" 
+                    class="img-fluid" alt="{{ post.image }}" />
+                </a>
+                </section>
+                <small>{{ matchingTags | join: ", " }}</small>
+            </article>
+                
         {% endif %}
-      {% endif %}
     {% endfor %}
+{% endcapture %}
 
-    {% if sameTagCount >= minCommonTags %}
+{% assign relatedPosts = posts | split: '|' | sort | reverse %}
 
-          <a href="{{ site.baseurl }}{{ post.url }}">
-              <div class="rel">
-                  <h5>{{ post.title }}</h5>
-                  <img width="100%" src="/thumbs/{{post.image}}">
-              </div>
-          </a>
+<header>
+    <h4>You might also like:</h4>
+    <hr>
+</header>
 
-      {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
-      {% if maxRelatedCounter >= maxRelated %}
-        {% break %}
+{% for i in (0..showRelatedPosts) %}
+    {{ relatedPosts[i] }}
+{% endfor %}
       {% endif %}
     {% endif %}
   {% endfor %}
