--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="id">
   {% include default/head.html %}
   <body>
+    {% include totop.html %}
     {% include default/navbar.html %}
     <div class="content">
       {{ content }}
